@@ -25,11 +25,9 @@ the software.
     <description>The parent ORCID pom that all sub-projects reside under</description>
 
     <properties>
-        <spring.version>5.3.19</spring.version>
-        <security.version>5.6.2</security.version>
+        <spring.version>5.3.20</spring.version>
+        <security.version>5.6.4</security.version>
         <liquibase.version>4.9.1</liquibase.version>
-        <jersey.version>1.19.1</jersey.version>
-        <swagger.version>1.6.6</swagger.version>
         <aspectj.version>1.9.6</aspectj.version>
         <jena.version>4.4.0</jena.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -39,6 +37,9 @@ the software.
         <aws.version>1.11.32</aws.version>
         <solr.version>8.0.0</solr.version>
         <junit.version>4.13.2</junit.version>
+        <jersey.version>1.19.1</jersey.version>
+        <swagger.version>1.6.5</swagger.version>
+        <jackson.version>2.11.4</jackson.version>
         <main.basedir>${project.basedir}</main.basedir>
         <branchVersion>1.1.5-SNAPSHOT</branchVersion>
     </properties>
@@ -139,9 +140,10 @@ the software.
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <inherited>true</inherited>				
+                <inherited>true</inherited>
                 <configuration>
-                    <release>11</release>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -149,8 +151,22 @@ the software.
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <!-- argLine>-Duser.timezone=America/Los_Angeles</argLine -->
-                    <argLine>-Duser.timezone=GMT --illegal-access=permit</argLine>
+                    <argLine>-Duser.timezone=GMT</argLine>
                     <runOrder>alphabetical</runOrder>
+                    <!-- we need to rewrite our unit test
+                    to be runOrder random and take avantage 
+                    of the speedup below
+                    <parallel>classes</parallel>
+                    <threadCount>4</threadCount>
+                    <perCoreThreadCount>true</perCoreThreadCount>
+                    -->
+                    <excludes>
+                        <exclude>**/*BaseTest.java</exclude>
+                        <exclude>**/integration/**.java</exclude>
+                        <exclude>**/*IntegrationTest.java</exclude>
+                        <exclude>**/*ITest.java</exclude>
+                        <exclude>org/orcid/integration/**/*.java</exclude>
+                    </excludes>
                 </configuration>
             </plugin>
             <plugin>
@@ -557,17 +573,17 @@ the software.
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-core</artifactId>
-                <version>2.10.1</version>
-            </dependency>
-            <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-annotations</artifactId>
-                <version>2.9.5</version>
+                <version>${jackson.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>2.10.0</version>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.dataformat</groupId>
+                <artifactId>jackson-dataformat-csv</artifactId>
+                <version>${jackson.version}</version>
             </dependency>            
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
@@ -828,7 +844,7 @@ the software.
             <dependency>
                <groupId>org.orcid</groupId>
                <artifactId>orcid-model</artifactId>
-               <version>3.0.9</version>
+               <version>3.0.10</version>
             </dependency>
             <dependency>
                <groupId>org.orcid</groupId>
